// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown can focus dropdown and select option 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      >
        Charmander
      </div>
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown can use arrow keys and enter to navigate options 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      >
        Charmander
      </div>
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown closes options when clicking outside 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-right-radius: 0rem;
  border-bottom-left-radius: 0rem;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

.c4 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  background: white;
  position: absolute;
  top: 100%;
  left: 0px;
  max-height: 10rem;
  overflow-y: scroll;
  width: 15rem;
  border: 0.5px solid rgba(211,214,215,0.25);
  border-radius: 0rem 0rem 0.25rem 0.25rem;
  z-index: 1000;
}

.c5 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:focus,
.c5:hover {
  background: rgba(211,214,215,0.5);
  cursor: pointer;
  outline: none;
}

.c6 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0.2rem;
  width: 2rem;
}

<div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      />
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,15L12,10L17,15H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
    <div
      class="sc-AxjAm sc-AxirZ c4"
    >
      <div
        class="sc-AxjAm sc-AxirZ c5"
        id="choosePokemon-option-Bulbasaur"
        tabindex="0"
      >
        <div
          class="sc-AxjAm sc-AxirZ c6"
        />
        <span>
          Bulbasaur
        </span>
      </div>
      <div
        class="sc-AxjAm sc-AxirZ c5"
        id="choosePokemon-option-Charmander"
        tabindex="0"
      >
        <div
          class="sc-AxjAm sc-AxirZ c6"
        />
        <span>
          Charmander
        </span>
      </div>
      <div
        class="sc-AxjAm sc-AxirZ c5"
        id="choosePokemon-option-Squirtle"
        tabindex="0"
      >
        <div
          class="sc-AxjAm sc-AxirZ c6"
        />
        <span>
          Squirtle
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Dropdown closes options when clicking outside 2`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

<div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      />
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Dropdown deselects option when clicking on them twice when dropdown is multi 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      />
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown displays all options when focused 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom-right-radius: 0rem;
  border-bottom-left-radius: 0rem;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

.c4 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  background: white;
  position: absolute;
  top: 100%;
  left: 0px;
  max-height: 10rem;
  overflow-y: scroll;
  width: 15rem;
  border: 0.5px solid rgba(211,214,215,0.25);
  border-radius: 0rem 0rem 0.25rem 0.25rem;
  z-index: 1000;
}

.c5 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  padding: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5:focus,
.c5:hover {
  background: rgba(211,214,215,0.5);
  cursor: pointer;
  outline: none;
}

.c6 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-right: 0.2rem;
  width: 2rem;
}

<div>
  <div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      />
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,15L12,10L17,15H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
    <div
      class="sc-AxjAm sc-AxirZ c4"
    >
      <div
        class="sc-AxjAm sc-AxirZ c5"
        id="choosePokemon-option-Bulbasaur"
        tabindex="0"
      >
        <div
          class="sc-AxjAm sc-AxirZ c6"
        />
        <span>
          Bulbasaur
        </span>
      </div>
      <div
        class="sc-AxjAm sc-AxirZ c5"
        id="choosePokemon-option-Charmander"
        tabindex="0"
      >
        <div
          class="sc-AxjAm sc-AxirZ c6"
        />
        <span>
          Charmander
        </span>
      </div>
      <div
        class="sc-AxjAm sc-AxirZ c5"
        id="choosePokemon-option-Squirtle"
        tabindex="0"
      >
        <div
          class="sc-AxjAm sc-AxirZ c6"
        />
        <span>
          Squirtle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown does not display options on initial render 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      />
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown selects multiple options when dropdown is multi 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      >
        Charmander, Squirtle
      </div>
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Dropdown selects options from values prop 1`] = `
.c0 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: filter .5s;
  transition: filter .5s;
  -webkit-filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  filter: drop-shadow(0rem 0rem 0rem rgba(0,0,0,0.5));
  z-index: 1;
}

.c1 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s;
  -webkit-filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  filter: drop-shadow(0em 0em 0em rgba(0,0,0,0.5));
  outline: 0 none;
  border: 0 none;
  cursor: pointer;
  background-color: #252c35;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 15rem;
  padding: .5rem 1rem;
}

.c1:hover {
  background-color: #1b2026;
}

.c1:active {
  background-color: #101317;
}

.c3 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  width: 3rem;
}

.c2 {
  box-sizing: border-box;
  font-family: Montserrat,Roboto,sans-serif;
  width: 100%;
  text-align: left;
}

<div>
  <div
    class="sc-AxjAm sc-AxirZ c0"
    data-testid="choosePokemon-valueContainer"
    elevation="0"
    id="choosePokemon-valueContainer"
    name="choosePokemon"
    tabindex="0"
  >
    <button
      class="sc-AxhUy sc-AxgMl sc-fznxsB c1"
      color="#252c35"
      data-test-id="hsui-button"
      elevation="0"
      type="fill"
    >
      <div
        class="sc-AxjAm sc-AxirZ c2"
      >
        Bulbasaur, Charmander
      </div>
      <div
        class="sc-AxjAm sc-AxirZ c3"
      >
        <svg
          role="presentation"
          style="width: 1.125rem; height: 1.125rem;"
          viewBox="0 0 24 24"
        >
          <path
            d="M7,10L12,15L17,10H7Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;
